@@ -851,6 +851,14 @@ operator|new
 name|HashMap
 argument_list|()
 decl_stmt|;
+specifier|private
+name|StringBuffer
+name|buffer
+init|=
+operator|new
+name|StringBuffer
+argument_list|()
+decl_stmt|;
 specifier|public
 name|Parser
 parameter_list|(
@@ -1249,6 +1257,15 @@ parameter_list|)
 throws|throws
 name|SAXException
 block|{
+name|processTextContent
+argument_list|()
+expr_stmt|;
+name|String
+name|context
+init|=
+name|getContext
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|md
@@ -1263,8 +1280,7 @@ literal|"project"
 operator|.
 name|equals
 argument_list|(
-name|getContext
-argument_list|()
+name|context
 argument_list|)
 operator|)
 condition|)
@@ -1299,8 +1315,7 @@ literal|"project/dependencies/dependency"
 operator|.
 name|equals
 argument_list|(
-name|getContext
-argument_list|()
+name|context
 argument_list|)
 condition|)
 block|{
@@ -1663,8 +1678,7 @@ literal|"project/dependencies/dependency/exclusions/exclusion"
 operator|.
 name|equals
 argument_list|(
-name|getContext
-argument_list|()
+name|context
 argument_list|)
 condition|)
 block|{
@@ -1696,8 +1710,7 @@ literal|"project/dependencies/dependency"
 operator|.
 name|equals
 argument_list|(
-name|getContext
-argument_list|()
+name|context
 argument_list|)
 condition|)
 block|{
@@ -1737,22 +1750,17 @@ name|pop
 argument_list|()
 expr_stmt|;
 block|}
-specifier|public
+specifier|private
 name|void
-name|characters
-parameter_list|(
-name|char
-index|[]
-name|ch
-parameter_list|,
-name|int
-name|start
-parameter_list|,
-name|int
-name|length
-parameter_list|)
-throws|throws
-name|SAXException
+name|processTextContent
+parameter_list|()
+block|{
+if|if
+condition|(
+name|buffer
+operator|!=
+literal|null
+condition|)
 block|{
 name|String
 name|txt
@@ -1761,28 +1769,24 @@ name|IvyPatternHelper
 operator|.
 name|substituteVariables
 argument_list|(
-operator|new
-name|String
-argument_list|(
-name|ch
-argument_list|,
-name|start
-argument_list|,
-name|length
-argument_list|)
+name|buffer
 operator|.
-name|trim
+name|toString
 argument_list|()
 argument_list|,
 name|properties
 argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|txt
 operator|.
 name|trim
 argument_list|()
+decl_stmt|;
+name|buffer
+operator|=
+literal|null
+expr_stmt|;
+if|if
+condition|(
+name|txt
 operator|.
 name|length
 argument_list|()
@@ -2053,6 +2057,50 @@ name|txt
 expr_stmt|;
 block|}
 block|}
+block|}
+block|}
+specifier|public
+name|void
+name|characters
+parameter_list|(
+name|char
+index|[]
+name|ch
+parameter_list|,
+name|int
+name|start
+parameter_list|,
+name|int
+name|length
+parameter_list|)
+throws|throws
+name|SAXException
+block|{
+if|if
+condition|(
+name|buffer
+operator|==
+literal|null
+condition|)
+block|{
+name|buffer
+operator|=
+operator|new
+name|StringBuffer
+argument_list|()
+expr_stmt|;
+block|}
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|ch
+argument_list|,
+name|start
+argument_list|,
+name|length
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|String
